developed Hero page and cards for mobile view

--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
     <title>Holiday Dream</title>
   </head>
   <body>
-   
+    <!-- start hero section -->
+
     <div class="hero">
-        <header>
-            <!-- I will place the code for the login and signup button -->
-          <div class="navbarLogin">
-            <a href="#">
-              <button class="login">Log in</button>
-            </a>
-            <a href="#">
-              <button class="signup">Sign up</button>
-            </a>
-          </div>
-    
-        </header>
+      <header>
+        <!-- I will place the code for the login and signup button -->
+        <div class="navbarLogin">
+          <a href="#">
+            <button class="login">Log in</button>
+          </a>
+          <a href="#">
+            <button class="signup">Sign up</button>
+          </a>
+        </div>
+      </header>
       <!-- I will place the text for the hero section and the find button -->
       <div class="heroText">
         <div class="dreamshare">DREAMSHARE</div>
@@ -33,5 +33,38 @@
         </div>
       </div>
     </div>
+
+    <!-- End hero section -->
+
+    <!-- start with the second screen view and the cards -->
+    <div class="second-screen-view">
+        <div class="how-dreamshare-works">How Dreamshare Works?</div>
+        <div id="card1" class="dreamshare-Card">
+            <div class="card-step">Step 1</div>
+            <div class="card-maintext">Sed leo enim, condimentum</div>
+            <div class="card-subtext">Quisque libero libero, dictum non turpis in, luctus semper lorem. Donec rhoncus a leo sit amet facilisis.</div>
+
+        </div>
+        <div id="card2" class="dreamshare-Card">
+            <div class="card-step">Step 1</div>
+            <div class="card-maintext">Sed leo enim, condimentum</div>
+            <div class="card-subtext">Quisque libero libero, dictum non turpis in, luctus semper lorem. Donec rhoncus a leo sit amet facilisis.</div>
+
+        </div>
+        <div id="card3" class="dreamshare-Card">
+            <div class="card-step">Step 1</div>
+            <div class="card-maintext">Sed leo enim, condimentum</div>
+            <div class="card-subtext">Quisque libero libero, dictum non turpis in, luctus semper lorem. Donec rhoncus a leo sit amet facilisis.</div>
+
+        </div>
+    </div>
+    <div class="search-section">
+        <div class="main-search-text"></div>
+        <div class="seach-message"></div>
+        <div class="search-input-box"></div>
+        <div class="search-button"></div>
+    </div>
+
+    <!-- end with the second screen view and the cards -->
   </body>
 </html>
